--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    font-family :   Arial, Helvetica, sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    font-size   :   1.3rem;
+    padding     :   1em;
+}
+input{
+    color       :   rgb(174, 243, 214);
+    font-size   :   1.3rem;
+    width       :   100%
+}
+.card{
+    align-content: center;
+    border: 1px solid grey;
+    border-radius: 6px;
+    margin: 0 10px 10px 0;
+    overflow: hidden;
+}
+.card p {
+    text-align: center;
+    padding: 5px;
+}
+.card img{
+    max-height: 170px;
+}
+.card-grid{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
